# pyscat

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_release.yml
doc/: .gitignore  about.rst  api.rst  conf.py  development.rst  ess_intro.ipynb  getting_started.ipynb  howto.ipynb  index.rst  references.rst  release_notes.rst  rtd_requirements.txt  sacess_intro.ipynb  using_pyscat.bib
src/pyscat/: __init__.py  ess.py  eval_logger.py  examples.py  function_evaluator.py  plot.py  refset.py  sacess.py  utils.py
tests/: conftest.py  test_ess.py  test_eval_logger.py  test_function_evaluator.py  test_misc.py  test_plot.py  test_refset.py  test_sacess.py  test_utils.py
