[build-system]
requires = ["setuptools>=77","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscat"
version = "0.0.0a0"
description = "PyScat: a Python library for scatter-search metaheuristics."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Daniel Weindl" },
]
# keywords = ["optimization", "metaheuristics", "scatter search", "global optimization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy",
  "pypesto",
  "fides",
]
[project.optional-dependencies]
test = ["pytest>=7", "pre-commit>=3", "pytest-rerunfailures", "scipy", "pypesto[cma,ipopt]"]
cma = ["pypesto[cma]"]
ipopt = ["pypesto[ipopt]"]
doc = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinxcontrib-bibtex", "nbsphinx", "scipy"]
[project.urls]
"Homepage" = "https://github.com/ICB-DCM/pyscat"
"Source" = "https://github.com/ICB-DCM/pyscat"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=doc/conf.py"
